# agent_atm

./: .gitignore  CONTRIBUTING.md  DESIGN.md  FUTURE.md  GEMINI.md  MANIFEST.in  Makefile  README.md  agent_atm.db  atm_webserver.md  main.py  post_request.sh  post_response.sh  pyproject.toml  usage.db
.github/workflows/: publish.yml
agent_atm/: __init__.py  client.py  context.py  core.py  hooks.py  limits.py  server.py
agent_atm/dashboard/: server.py
agent_atm/dashboard/static/: index.html
agent_atm/data_managers/: sqlite.py
agent_atm/hooks/: __init__.py
agent_atm/limits/: __init__.py
agent_atm/tokenizers/: __init__.py  gemma.py  google_genai.py
agent_atm/types/: __init__.py  event.py  limit.py  payload.py
demo_apps/adk_app_with_atm_as_localapp/: Makefile  main.py  pyproject.toml  test_app.py  token_manager.py
demo_apps/adk_app_with_atm_as_webserver/: .agent_atm_failed_events.jsonl  Makefile  README.md  main.py  pyproject.toml  test_app.py
docs/: DESIGN.md  GEMINI.md  privacy_guarantee.md
examples/: context_scoping.py  gemma_tokenizer.py  hooks_validation.py  quota_enforcement.py  rules_example.py
src/agent_atm/: __init__.py  client.py  core.py
src/agent_atm/cache/: __init__.py  base.py  disk.py  in_memory.py
src/agent_atm/dashboard/: __init__.py  server.py
src/agent_atm/data_managers/: __init__.py  base.py  in_memory.py  sqlalchemy.py  sqlite.py
src/agent_atm/hooks/: registry.py
src/agent_atm/limits/: registry.py
src/agent_atm/rules/: __init__.py  db_rules.py  engine.py  exceptions.py  py_rules.py
src/agent_atm/tokenizers/: base.py  gemma.py
tests/: __init__.py  smoke_test.py  test_context.py  test_core.py  test_data_managers.py  test_examples.py  test_hooks.py  test_limits.py  test_server_client.py  test_telemetry_upgrades.py  test_types.py
(+4 files in other folders)
