[project]
name = "agent-atm"
version = "1.0.0"
description = "Agent Token Manager (agent-atm) - A lightweight, privacy-first LLM token usage metering & quota capping SDK."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "tiktoken>=0.7.0",
    "gemma>=3.3.0",
    "sqlalchemy>=2.0.0"
]

[project.scripts]
agent_atm = "agent_atm.dashboard.server:run_dashboard"


[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


